hphp/hack/test/typecheck/parameter_modifiers/parameter_modifiers_optional_inout.php.exp
ERROR: File "parameter_modifiers_optional_inout.php", line 3, characters 32-36:
Optional parameter cannot be inout (Parsing[1002])
ERROR: File "parameter_modifiers_optional_inout.php", line 4, characters 29-29:
A right parenthesis `)` is expected here. (Parsing[1002])
ERROR: File "parameter_modifiers_optional_inout.php", line 4, characters 29-29:
Encountered unexpected text ``, was expecting a type hint. (Parsing[1002])
ERROR: File "parameter_modifiers_optional_inout.php", line 4, characters 56-62:
Cannot use collection initialization for non-collection class. (Parsing[1002])
ERROR: File "parameter_modifiers_optional_inout.php", line 4, characters 49-49:
Unbound name: `)` (a global constant) (Naming[2049])
ERROR: File "parameter_modifiers_optional_inout.php", line 4, characters 53-53:
Unbound name: `)` (a global constant) (Naming[2049])
ERROR: File "parameter_modifiers_optional_inout.php", line 4, characters 54-54:
Unbound name: `:` (a global constant) (Naming[2049])
ERROR: File "parameter_modifiers_optional_inout.php", line 4, characters 56-59:
Unexpected collection type `void` (Naming[2013])
ERROR: File "parameter_modifiers_optional_inout.php", line 4, characters 49-49:
Unbound global constant (Typing) (Typing[4106])
ERROR: File "parameter_modifiers_optional_inout.php", line 4, characters 53-53:
Unbound global constant (Typing) (Typing[4106])
ERROR: File "parameter_modifiers_optional_inout.php", line 4, characters 54-54:
Unbound global constant (Typing) (Typing[4106])
